# ib-web-rust

./: .gitignore  .tool-versions  Cargo.toml  Makefile.toml  README.md  api-docs.json  api-docs.orig.json  generator_config.yaml
.openapi-generator/: FILES
docs/: AbandonAccount.md  Account.md  AccountAttributes.md  AccountAttributesParent.md  AccountCloseInstruction.md  AccountCloseInstructionWithdrawalInfo.md  AccountData.md  AccountDetailsResponse.md  AccountManagementAccountsApi.md  AccountManagementEnumerationsApi.md  AccountManagementInstructionsApi.md  AccountManagementRequests.md  AccountManagementRequestsApi.md  AccountManagementRequestsPayload.md  AccountManagementStatementsApi.md  AccountManagementTransfersApi.md  AccountManagementUtilitiesApi.md  AccountRep.md  AccountStatusBulkResponse.md  AccountStatusRequest.md  AccountStatusResponse.md  AccountSummaryResponse.md  AccountSummaryResponseCashBalancesInner.md  AccountSupportType.md  AccreditedInvestor.md  AccreditedInvestorInformation.md  AchDetails.md  AchInstruction.md  AchInstructionClientAccountInfo.md  AddAdditionalAccounts.md  AddAdditionalAcct.md  AddClpCapability.md  AddEntity.md  AddLevfxCapability.md  AddMiFirData.md  AddNewUser.md  AddRelationship.md  AddTradingPermissions.md  Address.md  AdministratorContactPersonType.md  (+628 more)
src/apis/: account_management_accounts_api.rs  account_management_enumerations_api.rs  account_management_instructions_api.rs  account_management_requests_api.rs  account_management_statements_api.rs  account_management_transfers_api.rs  configuration.rs  (+30 more)
tests/: client.rs
(+634 files in other folders)
