[package]
name = "ib_web_rust"
version = "1.0.0"
authors = ["api@interactivebrokers.com"]
description = "The IB REST API reference documentation"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "^1.38", features = ["full"] }
tokio-test = "^0.4"
